# example-messaging-executor

./: .gitignore  .prettierignore  DEVELOP.md  Dockerfile  README.md  cspell.json  package-lock.json  package.json  tsconfig.json
.cspell/: custom-dictionary.txt
.github/workflows/: app.yml  aptos.yml  docker.yml  evm.yml  format.yml  sui.yml  svm.yml
api-docs/: main.tsp  package-lock.json  package.json  tspconfig.yaml
app/: BinaryReader.ts  BinaryWriter.ts  README.md  chainInfo.ts  redis.ts  redisClient.ts  relayHandlers.ts  relayInstructions.ts  relayWorker.ts  requestForExecution.test.ts  requestForExecution.ts  server.ts  signedQuote.test.ts  signedQuote.ts  types.ts
app/handlers/: evm.ts  index.ts  svm.ts
app/ntt/: index.ts
aptos/: .gitignore  DEPLOYMENTS.md  README.md  ci.sh
aptos/executor/: Move.toml
aptos/executor_requests/: Move.toml
design/: 02_On_Chain_Quotes.md
evm/: DEPLOYMENTS.md  README.md  foundry.toml
evm/script/: DeployExecutor.s.sol  DeployExecutorQuoter.s.sol  DeployExecutorQuoterRouter.s.sol  RequestExecution.s.sol
evm/sh/: deployExecutor.sh  deployExecutorQuoter.sh  deployExecutorQuoterRouter.sh  verify.sh
evm/src/: Executor.sol  ExecutorQuoter.sol  ExecutorQuoterRouter.sol
evm/test/: Executor.t.sol  ExecutorMessages.t.sol  ExecutorQuoter.t.sol  ExecutorQuoterRouter.t.sol  RelayInstructions.t.sol
stacks/: Clarinet.toml  package-lock.json  package.json
stacks/contracts/: executor-state.clar  executor.clar
stacks/deployments/: default.simnet-plan.yaml
stacks/tests/: executor-state.test.ts  executor.test.ts
sui/: DEPLOYMENTS.md
sui/executor/: Move.toml
sui/executor_requests/: Move.toml
svm/: .gitignore  Anchor.toml  README.md  TODO.md  package.json  tsconfig.json
svm/anchor/: Anchor.toml
svm/pinocchio/: Cargo.toml  README.md
svm/programs/: README.md
svm/programs/executor-quoter/: Cargo.toml
svm/programs/executor-quoter-anchor/: Cargo.toml
svm/programs/executor-quoter-anchor/src/: error.rs  lib.rs  state.rs
svm/programs/executor-quoter-anchor/src/instructions/: get_quote.rs  initialize.rs  mod.rs  update_chain_info.rs  update_quote.rs
svm/programs/executor-quoter-anchor/src/math/: mod.rs  u256.rs
svm/programs/executor-quoter-native/: Cargo.toml
svm/programs/executor-quoter-native/src/: error.rs  lib.rs  state.rs
svm/programs/executor-quoter-native/src/instructions/: get_quote.rs  initialize.rs  mod.rs  update_chain_info.rs  update_quote.rs
svm/programs/executor-quoter-native/src/math/: mod.rs  u256.rs
svm/programs/executor-quoter-router/: Cargo.toml
svm/programs/executor-quoter-router-tests/: Cargo.toml
svm/programs/executor-quoter-router-tests/benches/: compute_units.rs
svm/programs/executor-quoter-router-tests/src/: lib.rs
svm/programs/executor-quoter-router-tests/tests/: integration.rs
svm/programs/executor-quoter-router/benches/: compute_units.rs
svm/programs/executor-quoter-router/src/: error.rs  lib.rs  state.rs
svm/programs/executor-quoter-router/src/instructions/: executor_cpi.rs  initialize.rs  mod.rs  quote_execution.rs  quoter_cpi.rs  request_execution.rs  serialization.rs  update_quoter_contract.rs
svm/programs/executor-quoter-router/tests/: integration.rs
svm/programs/executor-quoter-tests/: Cargo.toml
svm/programs/executor-quoter-tests/tests/: integration.rs
svm/programs/executor-quoter/benches/: compute_units.rs
svm/programs/executor-quoter/src/: error.rs  lib.rs  state.rs
svm/programs/executor-quoter/src/instructions/: get_quote.rs  initialize.rs  mod.rs  update_chain_info.rs  update_quote.rs
svm/programs/executor-quoter/src/math/: mod.rs
svm/programs/executor-quoter/tests/: integration.rs
svm/scripts/: compare-cu.sh
svm/tests/: BinaryReader.ts  BinaryWriter.ts  executor-quoter-comparison.ts  executor-quoters.test.ts  executor.ts
xrpl/: SPEC.md
xrpl/examples/: package.json  requestForExecutionLayout.ts  sendPaymentWithMemo.ts  tsconfig.json
(+72 files in other folders)
