[package]
name = "executor-quoter-anchor"
version = "0.1.0"
description = "Anchor implementation of Executor Quoter - provides on-chain quote generation for cross-chain execution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "executor_quoter_anchor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
