[package]
name = "executor-quoter-native"
version = "0.1.0"
description = "Executor Quoter Native - solana_program version for CU comparison"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "executor_quoter_native"

[features]
default = []
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
solana-program = "1.18"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
