[package]
name = "executor-quoter-router"
version = "0.1.0"
description = "Executor Quoter Router - routes execution requests to registered quoter implementations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "executor_quoter_router"

[features]
default = []
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
pinocchio = "0.9.2"
pinocchio-system = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
libsecp256k1 = "0.7"
rand = "0.8"
mollusk-svm = "0.0.9-solana-1.18"
mollusk-svm-bencher = "0.0.9-solana-1.18"

[[bench]]
name = "compute_units"
harness = false
